[WebGL] Correct symbol lookup logic to handle 1-element arrays https://bugs.webkit.org/show_bug.cgi?id=126411 <rdar://problem/15394564>

Reviewed by Dean Jackson.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::getUniformLocation): Revise code to handle the case of single-element
arrays.


Canonical link: https://commits.webkit.org/144313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161242 268f45cc-cd09-0410-ab3c-d52691b4dbfc